fixing work view, price wrap, loanstatus, and search covers
- refactoring books page to render w/o edition
- fixing prices length wrapping
- choosing better variable name for StarRatings edition key
- using is_readable from jude's API (since now fixed)
- use archive.org availability API to fetch olid for cover

--- a/static/css/components/search-result-item.less
+++ b/static/css/components/search-result-item.less
@@ -70,7 +70,6 @@
     text-align: center;
     overflow: hidden;
     img {
-      box-shadow: 0 0 4px 1px @grey;
       border-radius: 4px;
       max-width: 100%;
       max-height: 300px;
